fixed responsive collapsed navbar

--- a/source/css/style.css
+++ b/source/css/style.css
@@ -11,18 +11,6 @@ h4 small
     bottom: 0;
 }
 
-@media (max-width: 767px) {
-    .sidebar {
-        padding-top: 30px;
-    }
-}
-@media (min-width: 980px) {
-    body {
-        padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
-        padding-bottom: 40px;
-    }
-}
-
 .panel-body {
     padding: 0px;
 }
